--- a/banner/build.gradle
+++ b/banner/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
     id 'org.jetbrains.kotlin.android'
 }
 
@@ -42,4 +43,16 @@ dependencies {
     implementation 'com.tencent.tav:libpag:4.3.3'
     implementation "androidx.exifinterface:exifinterface:1.3.6"
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
+}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release         // 表示发布 release（jitpack 都不会使用到）
+                groupId = 'com.github.codeguyFred' // 这个是依赖库的组 id
+                artifactId = 'PAGBanner'       // 依赖库的名称（jitpack 都不会使用到）
+                version = "1.0.0" //
+            }
+        }
+    }
 }
