--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     ext {
         agp_version = '7.4.0'
     }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.4.0'
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.4.0' apply false
